hphp/test/slow/exceptions/throwables_dynamic.php.expectf
caught[good]: Exception
caught[good]: InvalidOperationException
caught[good]: Error
caught[good]: AssertionError

Fatal error: Exceptions must implement the Throwable interface, got NonThrowable. in %s on line 7
